fix: green + in points not visible

--- a/src/styles.css
+++ b/src/styles.css
@@ -1051,10 +1051,14 @@ textarea.materialize-textarea {
 }
 
 .marker-icon.marker-icon-middle {
+	background-image: url(../assets/images/plus.svg) !important;
+	content: "Joe's Task:" !important;
+	color: pink;
 	height: 12px !important;
 	width: 12px !important;
 	background-color: var(--add) !important;
 	border: solid 2px var(--add) !important;
+	background-size: cover;
 	opacity: 0 !important;
 }
 
@@ -1072,12 +1076,6 @@ textarea.materialize-textarea {
 	width: 12px !important;
 }
 
-.marker-icon.marker-icon-middle::before {
-	content: "+" !important;
-	position: absolute !important;
-	top: -7px !important;
-	left: 0.5px !important;
-}
 
 .leaflet-container.editing {
 	cursor: not-allowed !important;
